--- a/drools-framework-common/pom.xml
+++ b/drools-framework-common/pom.xml
@@ -10,6 +10,31 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>drools-framework-common</artifactId>
 
+  <build>
+    <plugins>
+      <plugin>
+           <groupId>org.apache.felix</groupId>
+           <artifactId>maven-bundle-plugin</artifactId>
+           <executions>
+             <execution>
+               <id>bundle-manifest</id>
+               <phase>process-classes</phase>
+               <goals>
+                 <goal>manifest</goal>
+               </goals>
+             </execution>
+           </executions>
+           <extensions>true</extensions>
+           <configuration>
+             <instructions>
+               <Export-Package>org.chtijbug.drools.common.*</Export-Package>
+                <Private-Package>org.chtijbug.drools.common.*</Private-Package>
+             </instructions>
+           </configuration>
+         </plugin>
+    </plugins>
+  </build>
+
     <dependencies>
       <dependency>
         <groupId>com.google.guava</groupId>
