--- a/drools-framework-runtime-base/pom.xml
+++ b/drools-framework-runtime-base/pom.xml
@@ -36,7 +36,6 @@
         <artifactId>maven-shade-plugin</artifactId>
         <version>2.2</version>
         <executions>
-
           <execution>
 
             <phase>package</phase>
@@ -50,6 +49,27 @@
           <finalName>uber-${artifactId}-${version}</finalName>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>bundle-manifest</id>
+            <phase>process-classes</phase>
+            <goals>
+              <goal>manifest</goal>
+            </goals>
+          </execution>
+        </executions>
+        <extensions>true</extensions>
+        <configuration>
+          <instructions>
+            <Export-Package>org.chtijbug.drools.runtime.*</Export-Package>
+             <Private-Package>org.chtijbug.drools.runtime.*</Private-Package>
+          </instructions>
+        </configuration>
+      </plugin>
+
     </plugins>
   </build>
 
@@ -106,9 +126,11 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>com.thoughtworks.xstream</groupId>
-      <artifactId>xstream</artifactId>
+    	<groupId>org.apache.servicemix.bundles</groupId>
+    	<artifactId>org.apache.servicemix.bundles.xstream</artifactId>
+    	<version>1.4.3_1</version>
     </dependency>
+
     <dependency>
       <groupId>org.codehaus.jettison</groupId>
       <artifactId>jettison</artifactId>
