--- a/pom.xml
+++ b/pom.xml
@@ -221,8 +221,19 @@
             <dependency>
                 <groupId>org.apache.cxf</groupId>
                 <artifactId>cxf-bundle-jaxrs</artifactId>
-                <version>2.3.0</version>
+                <version>2.7.10</version>
             </dependency>
+          <dependency>
+               <groupId>org.apache.cxf</groupId>
+               <artifactId>cxf-rt-frontend-jaxrs</artifactId>
+               <version>2.7.10</version>
+             </dependency>
+          <dependency>
+                <groupId>org.apache.cxf</groupId>
+                <artifactId>cxf-rt-transports-http-hc</artifactId>
+                <!-- 2.7.8 or 3.0.0-milestone1 -->
+                <version>2.7.10</version>
+              </dependency>
             <dependency>
                 <groupId>commons-beanutils</groupId>
                 <artifactId>commons-beanutils</artifactId>
