--- a/drools-framework-rest-guvnor/pom.xml
+++ b/drools-framework-rest-guvnor/pom.xml
@@ -159,5 +159,16 @@
       <version>1.3</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>xalan</groupId>
+    	<artifactId>xalan</artifactId>
+    	<version>2.7.1</version>
+    </dependency>
+
+    <dependency>
+        <groupId>com.sun.jersey</groupId>
+        <artifactId>jersey-client</artifactId>
+        <version>1.12</version>
+    </dependency>
   </dependencies>
 </project>
