--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,8 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <executions>
+              <version>2.2.1</version>
+              <executions>
                     <execution>
                         <id>attach-sources</id>
                         <goals>
