--- a/drools-framework-rest-guvnor/pom.xml
+++ b/drools-framework-rest-guvnor/pom.xml
@@ -100,11 +100,11 @@
       <artifactId>cxf-bundle-jaxrs</artifactId>
     </dependency-->
     <dependency>
-      <groupId>org.drools</groupId>
+      <groupId>org.chtijbug.drools</groupId>
       <artifactId>droolsjbpm-ide-common</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.drools</groupId>
+      <groupId>org.chtijbug.drools</groupId>
       <artifactId>guvnor-jaxb-entities</artifactId>
     </dependency>
     <dependency>
@@ -160,15 +160,15 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-    	<groupId>xalan</groupId>
-    	<artifactId>xalan</artifactId>
-    	<version>2.7.1</version>
+      <groupId>xalan</groupId>
+      <artifactId>xalan</artifactId>
+      <version>2.7.1</version>
     </dependency>
 
     <dependency>
-        <groupId>com.sun.jersey</groupId>
-        <artifactId>jersey-client</artifactId>
-        <version>1.12</version>
+      <groupId>com.sun.jersey</groupId>
+      <artifactId>jersey-client</artifactId>
+      <version>1.12</version>
     </dependency>
   </dependencies>
 </project>
