--- a/pom.xml
+++ b/pom.xml
@@ -155,7 +155,7 @@
         <version>${drools.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.drools</groupId>
+        <groupId>org.chtijbug.drools</groupId>
         <artifactId>guvnor-jaxb-entities</artifactId>
         <version>${guvnor.version}</version>
       </dependency>
@@ -170,7 +170,7 @@
         <version>${drools.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.drools</groupId>
+        <groupId>org.chtijbug.drools</groupId>
         <artifactId>droolsjbpm-ide-common</artifactId>
         <version>${guvnor.version}</version>
       </dependency>
