--- a/drools-framework-rest-guvnor/pom.xml
+++ b/drools-framework-rest-guvnor/pom.xml
@@ -170,5 +170,23 @@
       <artifactId>jersey-client</artifactId>
       <version>1.12</version>
     </dependency>
+    <dependency>
+      <groupId>com.squareup.retrofit</groupId>
+      <artifactId>retrofit</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.squareup.retrofit</groupId>
+      <artifactId>converter-simplexml</artifactId>
+    </dependency>
+      <dependency>
+          <groupId>com.squareup.okhttp</groupId>
+          <artifactId>okhttp</artifactId>
+          <version>2.0.0</version>
+      </dependency>
+      <dependency>
+          <groupId>com.squareup.okhttp</groupId>
+          <artifactId>okhttp-urlconnection</artifactId>
+          <version>2.0.0</version>
+      </dependency>
   </dependencies>
 </project>
