--- a/pom.xml
+++ b/pom.xml
@@ -318,7 +318,19 @@
         <artifactId>commons-io</artifactId>
         <version>2.4</version>
       </dependency>
+
+      <dependency>
+        <groupId>com.squareup.retrofit</groupId>
+        <artifactId>retrofit</artifactId>
+        <version>1.6.1</version>
+      </dependency>
+      <dependency>
+        <groupId>com.squareup.retrofit</groupId>
+        <artifactId>converter-simplexml</artifactId>
+        <version>1.6.1</version>
+      </dependency>
     </dependencies>
+
   </dependencyManagement>
 
 
