--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>org.chtijbug.drools</groupId>
   <artifactId>drools-framework-parent</artifactId>
   <name>drools framework parent</name>
-  <version>2.0.0.SNAPSHOT</version>
+  <version>2.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <parent>
@@ -18,7 +18,7 @@
     <jbpm.version>5.5.0.Final</jbpm.version>
     <powermock.version>1.4.12</powermock.version>
     <jackson.version>2.3.1</jackson.version>
-    <guvnor.version>5.6.1.chtijbug</guvnor.version>
+    <guvnor.version>5.6.1.chtijbug-SNAPSHOT</guvnor.version>
   </properties>
 
   <licenses>
