--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>org.chtijbug.drools</groupId>
   <artifactId>drools-framework-parent</artifactId>
   <name>drools framework parent</name>
-  <version>1.5.0</version>
+  <version>1.5.1-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <parent>
